socialprofile_demo/static/css/socialprofile.css
#sp-login-modal .ui-dialog-contain {max-width: 273px;}
#sp-google-button .ui-icon {margin-top:-16px;width:34px; height:32px; background-image:url('../images/social_logo_strip_32.png');background-repeat:no-repeat;background-position: 0px 0px;background-color:transparent;border-radius:0;}
#sp-twitter-button .ui-icon {margin-top:-16px;width:34px; height:35px; background-image:url('../images/social_logo_strip_32.png');background-repeat:no-repeat;background-position: -74px 0px;background-color:transparent;border-radius:0;}
#sp-facebook-button .ui-icon {margin-top:-16px;width:34px; height:35px; background-image:url('../images/social_logo_strip_32.png');background-repeat:no-repeat;background-position: -36px 0px;background-color:transparent;border-radius:0;}
#sp-terms {font-size: 12px;}
#sp-profile-form ul {list-style-type: none;margin: 0 0 0 5px;padding: 0 0 0 0;width:97%;}
#tc-terms-html {width:80%;margin: auto;border: 1px solid #666;background-color: #ccc;padding: 8px;}
#tc-terms-form {text-align: center;}
#sp-profile-img {margin-top:18px;margin-left:18px;}
#sp-profile-img img {display:inline-block;height:80px;width:80px;}
#sp-profile-name {display:inline-block;vertical-align:top;margin-top:25px;margin-left:8px;}
#sp-profile-block {float:none;margin-top: 14px; margin-left:8px; margin-right: 10px;}
#sp-profile-block label {float:left;width:110px;text-align:right;font-weight:normal;margin-right: 10px;}
#sp-profile-block value {float:left;font-weight:bold;margin-right:10px;}
#sp-secure-content {margin: 0 0 0 5px;width:97%}

